# mathonomy

./: Cargo.toml  LICENSE  README.md
benches/: relativity.rs
src/: lib.rs  prelude.rs
src/classical/: mod.rs
src/classical/newtonian/: mod.rs
src/consts/: mod.rs
src/relativity/: energy.rs  lorentz.rs  mod.rs
src/vectors/: mod.rs  vec2.rs  vec3.rs
tests/: mod.rs
tests/relativity/: energy.rs  lorentz.rs  mod.rs
tests/vectors/: mod.rs
