[package]
name = "mathonomy"
version = "0.0.1"
edition = "2021"
description = "A flexible mathematics & physics library that is as simple - or complex - as you want it to be."
readme = "README.md"
license = "0BSD"
repository = "https://github.com/visionizer/mathonomy"
keywords = ["maths", "mathematics", "physics", "science", "no_std"]

categories = ["mathematics", "science", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "relativity"
harness = false
